--- a/nevernote-core/src/main/resources/static/edit.html
+++ b/nevernote-core/src/main/resources/static/edit.html
@@ -16,9 +16,9 @@
             html, body {
                 background-color: #fff;
             }
-            body {
+            /**body {
                 padding-top: 60px;
-            }
+            }**/
             .container > footer p {
                 text-align: center; 
             }
@@ -33,8 +33,8 @@
                         <ul class="nav">
                             <li><a href="edit.html"><i class="icon-plus icon-white"></i> Add a new note</a></li>
                             <li><a href="settings.html"><i class="icon-wrench icon-white"></i> Plugin settings</a></li>
-                            <li><a href="#">&nbsp;&nbsp;&nbsp;Fast note &nbsp;</a></li>
-                            <li>
+                            <!--<li><a href="#">&nbsp;&nbsp;&nbsp;Fast note &nbsp;</a></li>-->
+                            <!--<li>
                                 <form class="navbar-form form-inline pull-right">
                                     <input id="fastNoteTitle" type="text" class="span2" placeholder="Title">
                                     <div class="input-append">
@@ -42,7 +42,7 @@
                                         <button type="button" id="submitFastNoteButton" class="btn"><i class="icon-ok"></i></button>
                                     </div>
                                 </form>
-                            </li>
+                            </li>-->
                         </ul> 
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                 <div class="control-group">
                     <label class="control-label" for="inputContent">Content</label>
                     <div class="controls">
-                        <textarea id="inputContent" placeholder="Content" rows="10" class="span8"></textarea>
+                        <textarea id="inputContent" placeholder="Content" rows="5" class="span8"></textarea>
                     </div>
                 </div>
                 <div class="control-group">
